# barriolibre

./: .gitignore  Cargo.toml  README.md  STUDIO_OS.md  clippy.toml  opencode.jsonc  requirements-dev.txt
.cargo/: config.toml
agents/: README.md  art_director.md  audio_director.md  build_engineer.md  creative_director.md  economy_designer.md  game_designer.md  knowledge_curator.md  qa_director.md  race_designer.md  release_manager.md  studio_director.md  technical_director.md  tools_engineer.md  vehicle_designer.md  world_designer.md
assets/environment/: ENVIRONMENT_BASE_PACK_01.md
decisions/: ADR-001-bevy-engine.md  ADR-002-2.5d-isometric.md  ADR-003-prerendered-sprites.md  ADR-004-ecs-architecture.md  ADR-005-brand-naming.md  README.md
docs/: ASSET_PIPELINE.md  ASSET_REVIEW_GUIDE.md  CLAN_SYSTEM_GUIDE.md  ECONOMY_GUIDE.md  GAMEPLAY_GUIDE.md  GAME_ART_BIBLE.md  GAME_IDENTITY.md  NEIGHBORHOOD_DESIGN_GUIDE.md  PROGRESSION_GUIDE.md  RACE_DESIGN_GUIDE.md  README.md  VEHICLE_DESIGN_GUIDE.md  VISUAL_LANGUAGE.md
features/: README.md
features/clans/: qa.md  (+8 more)
knowledge/: README.md
lore/: README.md  adults_and_authority.md  neighborhood_races.md  tournament_organizers.md  why_build_cars.md  why_clans_exist.md  why_kids_race.md
metrics/: README.md  dashboard.md  project_state.json  studio_health.json
milestones/: MILESTONE_0_FOUNDATION_RUNTIME.md  README.md
mods/: README.md
production/: README.md
roadmap/: MVP.md  README.md  Sprint_01.md  Sprint_02.md  Sprint_02_PREVIEW.md  Sprint_03.md
scripts/: batch_process_environment_pack.py  batch_process_environment_pack_02.py  batch_process_environment_pack_03.py  batch_process_environment_phase2.py  build_phase2_prompts.py  ci.ps1  environment_tile_prompts.py  export_environment_prompts.py  list_missing_tiles.py  phase2_pack_definitions.py  process_environment_tile.py  run-dev.ps1  studio_scan.py
src/: main.rs
tools/: README.md
tools/map_validator/: Cargo.toml  README.md
tools/map_validator/src/: main.rs
tools/tiled_mcp/: README.md  pyproject.toml
tools/tiled_mcp/tests/: test_tiled_mcp.py
tools/tiled_mcp/tiled_mcp/: __main__.py  live_bridge.py  mutators.py  runners.py  server.py  tmx_io.py  ui_bridge.py
(+617 files in other folders)
