[workspace]
members = [".", "tools/map_validator"]
resolver = "2"

[package]
name = "barriolibre"
version = "0.1.0"
edition = "2021"
description = "Carreras de Barrio — Foundation Runtime"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bevy = { version = "0.15", default-features = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"

[features]
default = ["dev_fast"]
dev_fast = ["bevy/dynamic_linking"]
dev_hot_reload = ["bevy/file_watcher"]

[profile.dev]
opt-level = 1
debug = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
needless_pass_by_value = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
items_after_statements = "allow"
assigning_clones = "allow"
redundant_closure_for_method_calls = "allow"
derivable_impls = "allow"
