[project]
name = "tiled-mcp"
version = "0.1.0"
description = "MCP server for Tiled map editor integration with BarrioLibre"
requires-python = ">=3.10"
license = { text = "MIT OR Apache-2.0" }
dependencies = [
    "mcp>=1.2.0",
    "pillow>=10.0.0",
    "uiautomation>=2.0.0",
]

[project.scripts]
tiled-mcp = "tiled_mcp.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tiled_mcp"]

[tool.setuptools.package-dir]
tiled_mcp = "tiled_mcp"
